# KTech

./: .bear  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  aboutbox_8hpp_source.html  animation_8hpp_source.html  annotated.html  button_8hpp_source.html  cachingregistry_8hpp_source.html  callback_8hpp_source.html  callbacksgroup_8hpp_source.html  camera_8hpp_source.html  cell_8hpp_source.html  cella_8hpp_source.html  classAboutBox-members.html  classAboutBox.html  classButton-members.html  classButton.html  classFrame-members.html  classFrame.html  classIntField-members.html  classIntField.html  classKTech_1_1Animation-members.html  classKTech_1_1Animation.html  classKTech_1_1CachingRegistry-members.html  classKTech_1_1CachingRegistry.html  classKTech_1_1Camera-members.html  classKTech_1_1Camera.html  classKTech_1_1Collision-members.html  classKTech_1_1Collision.html  classKTech_1_1Engine-members.html  classKTech_1_1Engine.html  classKTech_1_1Input-members.html  classKTech_1_1Input.html  classKTech_1_1Input_1_1CallbacksGroup-members.html  classKTech_1_1Input_1_1CallbacksGroup.html  classKTech_1_1Layer-members.html  (+127 more)
examples/simpleplatform1/: CMakeLists.txt  game.cpp  premake5.lua
examples/simpleplatform1/assets/: house.ktecht  (+2 more)
ktech/: CMakeLists.txt  audio.cpp  camera.cpp  collider.cpp  collision.cpp  container.cpp  engine.cpp  input.cpp  ktech.hpp  layer.cpp  map.cpp  memory.cpp  object.cpp  output.cpp  premake5.lua  texture.cpp  time.cpp  timepoint.cpp  ui.cpp  widget.cpp
ktech/basic/: cell.hpp  cella.hpp  point.hpp  rgb.hpp  rgba.hpp  upoint.hpp
ktech/basic_structs/: cella.hpp
ktech/engine/: audio.cpp  audio.hpp  collision.cpp  collision.hpp  engine.cpp  engine.hpp  input.cpp  io.hpp  memory.cpp  memory.hpp  output.cpp  output.hpp  time.cpp  time.hpp  timepoint.cpp
ktech/misc/: container.cpp  keys.hpp  rgbacolors.hpp  rgbcolors.hpp
ktech/utility/: animation.cpp  animation.hpp  cachingregistry.hpp  container.cpp  container.hpp  cr.hpp  id.hpp  internals.hpp  keys.hpp  rgbacolors.hpp  rgbcolors.hpp
ktech/widgets/: aboutbox.hpp  button.hpp  frame.hpp  intfield.hpp  stringfield.hpp  switch.hpp  widget.hpp
ktech/world/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  collider.cpp  collider.hpp  layer.cpp  layer.hpp  map.cpp  map.hpp  object.cpp  object.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  widget.cpp  widget.hpp
ktech/world_structs/: camera.cpp  camera.hpp  collider.hpp  layer.cpp  layer.hpp  map.cpp  map.hpp  object.cpp  object.hpp  texture.cpp  texture.hpp  ui.hpp  widget.hpp
(+262 files in other folders)
